--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,11 @@ repositories {
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+
+    implementation 'org.hibernate:hibernate-core:6.2.0.Final'
+    implementation 'org.hibernate:hibernate-core-jakarta:6.2.0.Final'
+    implementation 'org.glassfish.jaxb:jaxb-runtime:3.0.0'
+
 }
 
 test {
