--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ dependencies {
     implementation 'org.hibernate:hibernate-core:6.2.0.Final'
     implementation 'org.hibernate:hibernate-core-jakarta:6.2.0.Final'
     implementation 'org.glassfish.jaxb:jaxb-runtime:3.0.0'
+    implementation 'mysql:mysql-connector-java:8.0.32'
 
 }
 
